--- a/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ConfirmEmailModel
+@model OpenId.Authority.Areas.Identity.Pages.Account.ConfirmEmailModel
 @{
     ViewData["Title"] = "Confirm email";
 }
