--- a/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/Manage/Disable2fa.cshtml
+++ b/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/Manage/Disable2fa.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
-@model Disable2faModel
+@using OpenId.Authority.Areas.Identity.Pages.Account.Manage
+@model OpenId.Authority.Areas.Identity.Pages.Account.Manage.Disable2faModel
 @{
     ViewData["Title"] = "Disable two-factor authentication (2FA)";
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
