--- a/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RegisterConfirmationModel
+@model OpenId.Authority.Areas.Identity.Pages.Account.RegisterConfirmationModel
 @{
     ViewData["Title"] = "Register confirmation";
 }
