--- a/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ResetPasswordModel
+@model OpenId.Authority.Areas.Identity.Pages.Account.ResetPasswordModel
 @{
     ViewData["Title"] = "Reset password";
 }
