--- a/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model AccessDeniedModel
+@model OpenId.Authority.Areas.Identity.Pages.Account.AccessDeniedModel
 @{
     ViewData["Title"] = "Access denied";
 }
