--- a/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
+++ b/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ConfirmEmailChangeModel
+@model OpenId.Authority.Areas.Identity.Pages.Account.ConfirmEmailChangeModel
 @{
     ViewData["Title"] = "Confirm email change";
 }
