--- a/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ExternalLoginModel
+@model OpenId.Authority.Areas.Identity.Pages.Account.ExternalLoginModel
 @{
     ViewData["Title"] = "Register";
 }
