--- a/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/Lockout.cshtml
+++ b/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/Lockout.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model LockoutModel
+@model OpenId.Authority.Areas.Identity.Pages.Account.LockoutModel
 @{
     ViewData["Title"] = "Locked out";
 }
