--- a/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/Logout.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model LogoutModel
+@model OpenId.Authority.Areas.Identity.Pages.Account.LogoutModel
 @{
     ViewData["Title"] = "Log out";
 }
