--- a/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
-@model ChangePasswordModel
+@using OpenId.Authority.Areas.Identity.Pages.Account.Manage
+@model OpenId.Authority.Areas.Identity.Pages.Account.Manage.ChangePasswordModel
 @{
     ViewData["Title"] = "Change password";
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
