--- a/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
-@model DeletePersonalDataModel
+@using OpenId.Authority.Areas.Identity.Pages.Account.Manage
+@model OpenId.Authority.Areas.Identity.Pages.Account.Manage.DeletePersonalDataModel
 @{
     ViewData["Title"] = "Delete Personal Data";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
