--- a/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/Manage/DownloadPersonalData.cshtml
+++ b/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/Manage/DownloadPersonalData.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
-@model DownloadPersonalDataModel
+@using OpenId.Authority.Areas.Identity.Pages.Account.Manage
+@model OpenId.Authority.Areas.Identity.Pages.Account.Manage.DownloadPersonalDataModel
 @{
     ViewData["Title"] = "Download Your Data";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
