--- a/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
+++ b/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using OpenId.Authority.Areas.Identity.Pages.Account.Manage
 @model EnableAuthenticatorModel
 @{
     ViewData["Title"] = "Configure authenticator app";
