--- a/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
+++ b/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using OpenId.Authority.Areas.Identity.Pages.Account.Manage
 @model ExternalLoginsModel
 @{
     ViewData["Title"] = "Manage your external logins";
