--- a/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
+++ b/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using OpenId.Authority.Areas.Identity.Pages.Account.Manage
 @model SetPasswordModel
 @{
     ViewData["Title"] = "Set password";
