--- a/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @using Microsoft.AspNetCore.Http.Features
+@using OpenId.Authority.Areas.Identity.Pages.Account.Manage
 @model TwoFactorAuthenticationModel
 @{
     ViewData["Title"] = "Two-factor authentication (2FA)";
