--- a/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/Register.cshtml
+++ b/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RegisterModel
+@model OpenId.Authority.Areas.Identity.Pages.Account.RegisterModel
 @{
     ViewData["Title"] = "Register";
 }
