--- a/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
+++ b/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ResendEmailConfirmationModel
+@model OpenId.Authority.Areas.Identity.Pages.Account.ResendEmailConfirmationModel
 @{
     ViewData["Title"] = "Resend email confirmation";
 }
