--- a/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/OpenId/OpenId.Authority/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ResetPasswordConfirmationModel
+@model OpenId.Authority.Areas.Identity.Pages.Account.ResetPasswordConfirmationModel
 @{
     ViewData["Title"] = "Reset password confirmation";
 }
