--- a/OpenId/OpenId.BlazorWasm/Pages/LoginForm.razor
+++ b/OpenId/OpenId.BlazorWasm/Pages/LoginForm.razor
@@ -1,5 +1,6 @@
 ﻿@page "/account/login"
 
+@using System.Diagnostics.CodeAnalysis
 @using System.Net
 @using System.Net.Http.Headers
 @using Microsoft.AspNetCore.Components.Authorization
@@ -51,6 +52,20 @@
 @code {
     [SupplyParameterFromQuery] private string? ReturnUrl { get; set; }
     [SupplyParameterFromForm] private LoginInputModel LoginInputModel { get; set; } = new();
+    
+    
+    // ConstructorContainsNullParameterNames, System.Net.Http.FormUrlEncodedContent System.NotSupportedException: ConstructorContainsNullParameterNames, System.Net.Http.FormUrlEncodedContent
+    [DynamicDependency(DynamicallyAccessedMemberTypes.PublicConstructors, typeof(Dictionary<string, string>))]
+    private readonly Dictionary<string, string> _values = new()
+    {
+        { "grant_type", "password" },
+        { "username", "bartvanhoey@hotmail.com" },
+        { "password", "Server2008!" },
+        { "client_id", "blazorwasm-oidc-application" },
+        { "client_secret", "388D45FA-B36B-4988-BA59-B187D329C206" }
+            
+    };
+    
 
     private async Task LoginUserAsync()
     {
@@ -62,16 +77,9 @@
         httpclient.DefaultRequestHeaders.Accept.Add(new MediaTypeWithQualityHeaderValue("application/x-www-form-urlencoded"));
         
         // Set up the request content
-        var values = new Dictionary<string, string>
-        {
-            { "grant_type", "password" },
-            { "username", "bartvanhoey@hotmail.com" },
-            { "password", "Server2008!" },
-            { "client_id", "blazorwasm-oidc-application" },
-            { "client_secret", "388D45FA-B36B-4988-BA59-B187D329C206" }
-            
-        };
-        var formUrlEncodedContent = new FormUrlEncodedContent(values);
+        
+        
+        var formUrlEncodedContent = new FormUrlEncodedContent(_values);
         
         var response = await httpclient.PostAsync("connect/token", formUrlEncodedContent);
         if (response.StatusCode == HttpStatusCode.OK)
