--- a/OpenId/OpenId.BlazorWasm/Pages/Home.razor
+++ b/OpenId/OpenId.BlazorWasm/Pages/Home.razor
@@ -1,7 +1,23 @@
 ﻿@page "/"
 @layout MainLayout
+@inject IConfiguration Configuration
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+
+<br/>
+<br/>
+
+The environment is @EnvironmentName.
+
+@code
+{
+    protected override void OnInitialized()
+    {
+        EnvironmentName = Configuration.GetValue<string>("Environment");
+    }
+
+    private string? EnvironmentName { get; set; }
+}
